# rules_m4

./: AUTHORS  MODULE.bazel  README.md  WORKSPACE  m4.bzl
.bazelci/: presubmit.yml
docs/: BUILD  rules_m4.md
internal/: BUILD  capture_stdout.c
internal/overlay/: config.h  m4_bin_BUILD
m4/: BUILD  extensions.bzl  m4.bzl  providers.bzl  toolchain.bzl  toolchain_type.bzl
m4/extensions/: BUILD  m4_repository_ext.bzl
m4/internal/: BUILD  capture_stdout.c  default_toolchain_ext.bzl  deny_shell.c  gnulib.bzl  repository.bzl  testutil.bzl  testutil_ext.bzl  toolchain.bzl  toolchain_alias.bzl  toolchain_info.bzl  versions.bzl
m4/internal/gnulib/: config-darwin.h  config-freebsd.h  config-linux.h  config-openbsd.h  config-windows.h  gnulib.BUILD  gnulib.bzl
m4/internal/overlay/: config.h  configmake.h  gnulib_common_config.h  gnulib_windows_config.h  m4.BUILD  m4_bin.BUILD  m4_syscmd_shell.h
m4/internal/overlay/gnulib-darwin/: config.h
m4/internal/overlay/gnulib-linux/: config.h
m4/internal/overlay/gnulib-windows/: config.h
m4/rules/: m4.bzl  m4_repository.bzl  m4_toolchain_repository.bzl
m4/toolchains/: BUILD
tests/: BUILD  docs_test.sh  expansion_test.in  m4_test.cc  recovery_test.in  template_1.m4  template_2.m4  template_test.in  template_test_1.m4  template_test_2.m4
toolchains/: BUILD
tools/stardoc/: BUILD  rules_m4_md.bzl
