module(
    name = "rules_m4",
    version = "0.2.2-bcr.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "googletest",
    version = "1.11.0",
    repo_name = "com_google_googletest",
    dev_dependency = True,
)

initialize_m4_toolchains = use_extension(
    "@rules_m4//m4:extensions.bzl",
    "initialize_m4_toolchains",
)
initialize_m4_toolchains.configure(extra_copts = [])
use_repo(initialize_m4_toolchains, "m4_v1.4.18")
register_toolchains("@rules_m4//m4/toolchains:v1.4.18")
